--- a/index.html
+++ b/index.html
@@ -12,9 +12,29 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-info">
-        <a class="navbar-brand" href="#">My Portfolio</a>
+    <nav class="navbar navbar-dark bg-info text-light">
+        <h3>Cole Anderson</h3>
+        <h3>My Portfolio</h3>
     </nav>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">About Me:</h5>
+                <p class="card-text">My name is Cole Anderson. I graduated as salutatorian of Charleston High School in 2018 and then became a
+                    student of Base Camp Coding Academy's class of 2019.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">My Projects:</h5>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">My Resume:</h5>
+            </div>
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
