--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
         <h3>Cole Anderson</h3>
-        <h3>My Portfolio</h3>
+        <div class="d-flex">
+            <a class="text-light pr-2" href="">Bio </a>
+            <a class="text-light pr-2" href="">Projects </a>
+            <a class="text-light pr-2" href="">Resume </a>
+            <a class="text-light pr-2" href="">Contact Info </a>
+        </div>
     </nav>
     <div class="container">
         <div class="card">
@@ -34,13 +39,16 @@
                 <h5 class="card-title">My Resume:</h5>
             </div>
         </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Contact Information:</h5>
+                <p>Github Page: ColeAnderson7278</p>
+                <p>Base Camp Email: canderson@basecampcodingacademy.org</p>
+                <p>Personal Email: coleanderson7278@gmail.com</p>
+                <p>Phone: (662)699-9054</p>
+            </div>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
