--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">My Projects:</h5>
+                <div class="container">
+                    <div class="card text-light pl-2">
+                        <h5>Gladiators:</h5>
+                    </div>
+                    <div class="card text-light pl-2">
+                        <h5>Rental Agency:</h5>
+                    </div>
+                    <div class="card text-light pl-2">
+                        <h5>Fake Base Camp:</h5>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="card">
