Added Projects Page
Added a page that will show all my projects and describe them.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <nav class="navbar navbar-dark bg-info text-light">
         <h3>Cole Anderson</h3>
         <div class="d-flex">
-            <a class="text-light pr-2" href="">Bio </a>
-            <a class="text-light pr-2" href="">Projects </a>
+            <a class="text-light pr-2" href="index.html">Bio </a>
+            <a class="text-light pr-2" href="projects.html">Projects </a>
             <a class="text-light pr-2" href="">Resume </a>
             <a class="text-light pr-2" href="">Contact Info </a>
         </div>
@@ -26,23 +26,7 @@
             <div class="card-body">
                 <h5 class="card-title">About Me:</h5>
                 <p class="card-text">My name is Cole Anderson. I graduated as salutatorian of Charleston High School in 2018 and then became a
-                    student of Base Camp Coding Academy's class of 2019.</p>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">My Projects:</h5>
-                <div class="container">
-                    <div class="card text-light pl-2">
-                        <h5>Gladiators:</h5>
-                    </div>
-                    <div class="card text-light pl-2">
-                        <h5>Rental Agency:</h5>
-                    </div>
-                    <div class="card text-light pl-2">
-                        <h5>Fake Base Camp:</h5>
-                    </div>
-                </div>
+                    student of Base Camp Coding Academy's class of 2019 on June 6, 2018.</p>
             </div>
         </div>
         <div class="card">
