--- a/projects.html
+++ b/projects.html
@@ -23,20 +23,31 @@
     </nav>
     <div class="container">
         <div class="card text-light pl-2">
-            <h4>Gladiators</h4>
+            <h4>Gladiators & OOP Gladiators</h4>
             <div class="d-flex">
                 <h6 class="d-flex pr-2">Coded With:
-                    <p class="text-info pl-1">Python</p>
+                    <p class="text-info pl-2">Python</p>
                 </h6>
                 <h6 class="d-flex pr-2">Programming Age:
-                    <p class="text-info pl-1">1 Month</p>
+                    <p class="text-info pl-2">1 Month</p>
                 </h6>
-                <h6 class="pr-2">
-                    <a class="text-light" href="https://github.com/ColeAnderson7278/Gladiators">Github Link</a>
+            </div>
+            <div class="d-flex">
+                <h6>Links: </h6>
+                <h6 class="pl-2">
+                    <a class="text-info" href="https://github.com/ColeAnderson7278/Gladiators">Gladiators</a>
+                </h6>
+                <h6>,</h6>
+                <h6 class="pl-2">
+                    <a class="text-info" href="https://github.com/ColeAnderson7278/OOP-Gladiators">OOP Gladiators</a>
                 </h6>
             </div>
             <h6>Description:</h6>
-            <h6></h6>
+            <h6>These two programs are following the same goals and using the same language; however, I used two different coding
+                styles to achieve said goals. In Gladiators I used standard python to make a turn based fighting game. I
+                did the same in OOP Gladiators, but in that program I used a class based system to better organize my code.
+                I put these two together because I believe that help to show how I updated, and expanded, a simple program
+                into something more efficient.</h6>
         </div>
     </div>
 </body>
