Added Fake B.C. Card
Added this card following the previous cards guidelines and style.

--- a/projects.html
+++ b/projects.html
@@ -42,12 +42,41 @@
                     <a class="text-info" href="https://github.com/ColeAnderson7278/OOP-Gladiators">OOP Gladiators</a>
                 </h6>
             </div>
-            <h6>Description:</h6>
-            <h6>These two programs are following the same goals and using the same language; however, I used two different coding
-                styles to achieve said goals. In Gladiators I used standard python to make a turn based fighting game. I
-                did the same in OOP Gladiators, but in that program I used a class based system to better organize my code.
-                I put these two together because I believe that help to show how I updated, and expanded, a simple program
-                into something more efficient.</h6>
+            <div>
+                <h6>Description:</h6>
+                <h6 class="text-info">These two programs are following the same goals and using the same language; however, I used two different
+                    coding styles to achieve said goals. In Gladiators I used standard python to make a turn based fighting
+                    game. I did the same in OOP Gladiators, but in that program I used a class based system to better organize
+                    my code. I put these two together because I believe that help to show how I updated, and expanded, a
+                    simple program into something more efficient.</h6>
+            </div>
+        </div>
+        <div class="card text-light pl-2">
+            <h4>Fake Base Camp Page & Log-In</h4>
+            <div class="d-flex">
+                <h6 class="d-flex pr-2">Coded With:
+                    <p class="text-info pl-2">HTML & CSS</p>
+                </h6>
+                <h6 class="d-flex pr-2">Programming Age:
+                    <p class="text-info pl-2">3 Months</p>
+                </h6>
+            </div>
+            <div class="d-flex">
+                <h6>Links: </h6>
+                <h6 class="pl-2">
+                    <a class="text-info" href="https://github.com/ColeAnderson7278/Fake_BaseCampPage">Fake B.C. Page</a>
+                </h6>
+                <p>,</p>
+                <h6 class="pl-2">
+                    <a class="text-info" href="https://github.com/ColeAnderson7278/Fake_BaseCampLogin">Fake B.C. Log-In</a>
+                </h6>
+            </div>
+            <div>
+                <h6>Description:</h6>
+                <h6 class="text-info">These are two programs that I wrote after we first began learning HTML and CSS. These two pages have flaws,
+                    but they taught me a lot about what I could do with my new set of tools and what not to do with them.
+                    Even in their simplicity these pages help me establish a good foothold and idea of front-end design.</h6>
+            </div>
         </div>
     </div>
 </body>
