--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My Projects</title>
+    <title>Projects</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
-    <script src="javaScript.js"></script>
 </head>
 
 <body>
@@ -17,8 +15,8 @@
         <div class="d-flex">
             <a class="text-light pr-2" href="index.html">Bio </a>
             <a class="text-light pr-2" href="projects.html">Projects </a>
-            <a class="text-light pr-2" href="">Resume </a>
-            <a class="text-light pr-2" href="">Contact Info </a>
+            <a class="text-light pr-2" href="resume.html">Resume </a>
+            <a class="text-light pr-2" href="contact.html">Contact Info </a>
         </div>
     </nav>
     <div class="container">
