--- a/resume.html
+++ b/resume.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My Portfolio</title>
+    <title>Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
 </head>
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>Cole Anderson</h3>
+        <h3>Resume</h3>
         <div class="d-flex">
             <a class="text-light pr-2" href="index.html">Bio </a>
             <a class="text-light pr-2" href="projects.html">Projects </a>
@@ -19,15 +19,6 @@
             <a class="text-light pr-2" href="contact.html">Contact Info </a>
         </div>
     </nav>
-    <div class="container">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">About Me:</h5>
-                <p class="card-text">My name is Cole Anderson. I graduated as salutatorian of Charleston High School in 2018 and then became a
-                    student of Base Camp Coding Academy's class of 2019 on June 6, 2018.</p>
-            </div>
-        </div>
-    </div>
 </body>
 
 </html>
