Updated Contact Page
In the contact page I updated the info and styled it appropriately.

--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,21 @@
     </nav>
     <div class="card">
         <div class="card-body">
-            <h5 class="card-title">Contact Information:</h5>
-            <p>Github Page: ColeAnderson7278</p>
-            <p>Base Camp Email: canderson@basecampcodingacademy.org</p>
-            <p>Personal Email: coleanderson7278@gmail.com</p>
-            <p>Phone: (662)699-9054</p>
+            <h4 class="card-title text-light">Contact Information:</h4>
+            <h6 class="text-light">Github:
+                <p>
+                    <a href="" class="text-info">ColeAnderson7278</a>
+                </p>
+            </h6>
+            <h6 class="text-light">Base Camp Email:
+                <p class="text-info">canderson@basecampcodingacademy.org</p>
+            </h6>
+            <h6 class="text-light">Personal Email:
+                <p class="text-info">coleanderson7278@gmail.com</p>
+            </h6>
+            <h6 class="text-light">Phone:
+                <p class="text-info">(662)699-9054</p>
+            </h6>
         </div>
     </div>
 </body>
