--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>My Projects</h3>
+        <h3>Projects</h3>
         <div class="d-flex">
             <a class="text-light pr-2" href="index.html">Bio </a>
             <a class="text-light pr-2" href="projects.html">Projects </a>
