Added Personal Inquiries Page
This page is designed to show what I've
learned, and researched, on my own.

--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
             <a class="text-light pr-2" href="projects.html">Projects </a>
             <a class="text-light pr-2" href="resume.html">Resume </a>
             <a class="text-light pr-2" href="contact.html">Contact Info </a>
+            <a class="text-light pr-2" href="personal_inquiries.html">Personal Inquiries</a>
         </div>
     </nav>
     <div class="container">
