--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,12 @@
             <a class="text-light pr-2" href="projects.html">Projects </a>
             <a class="text-light pr-2" href="resume.html">Resume </a>
             <a class="text-light pr-2" href="contact.html">Contact Info </a>
+            <a class="text-light pr-2" href="personal_inquiries.html">Personal Inquiries</a>
         </div>
     </nav>
+    <div class="card text-light">
+        <h4>This page is to be added at a later date.</h4>
+    </div>
 </body>
 
 </html>
