--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
             <a class="text-light pr-2" href="projects.html">Projects </a>
             <a class="text-light pr-2" href="resume.html">Resume </a>
             <a class="text-light pr-2" href="contact.html">Contact Info </a>
+            <a class="text-light pr-2" href="personal_inquiries.html">Personal Inquiries</a>
         </div>
     </nav>
     <div class="container">
         <div class="card">
             <div class="card-body">
-                <h5 class="card-title">About Me:</h5>
-                <p class="card-text">My name is Cole Anderson. I graduated as salutatorian of Charleston High School in 2018 and then became a
-                    student of Base Camp Coding Academy's class of 2019 on June 6, 2018.</p>
+                <h4 class="card-title text-light">About Me:</h4>
+                <h5 class="card-text text-info">My name is Cole Anderson. I graduated as salutatorian of Charleston High School in 2018 and then became a
+                    student of Base Camp Coding Academy's class of 2019 on June 6, 2018.</h5>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title text-light">Learned Languages:</h4>
+                <h5 class="card-text text-info">Python, HTML, CSS and JavaScript</h5>
             </div>
         </div>
     </div>
