--- a/personal_inquiries.html
+++ b/personal_inquiries.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Contact Info</title>
+    <title>Personal Inquiries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
 </head>
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>Contact Info</h3>
+        <h3>Personal Inquiries</h3>
         <div class="d-flex">
             <a class="text-light pr-2" href="index.html">Bio </a>
             <a class="text-light pr-2" href="projects.html">Projects </a>
@@ -20,25 +20,6 @@
             <a class="text-light pr-2" href="personal_inquiries.html">Personal Inquiries</a>
         </div>
     </nav>
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title text-light">Contact Information:</h4>
-            <h6 class="text-light">Github:
-                <p>
-                    <a href="" class="text-info">ColeAnderson7278</a>
-                </p>
-            </h6>
-            <h6 class="text-light">Base Camp Email:
-                <p class="text-info">canderson@basecampcodingacademy.org</p>
-            </h6>
-            <h6 class="text-light">Personal Email:
-                <p class="text-info">coleanderson7278@gmail.com</p>
-            </h6>
-            <h6 class="text-light">Phone:
-                <p class="text-info">(662)699-9054</p>
-            </h6>
-        </div>
-    </div>
 </body>
 
 </html>
