--- a/index.html
+++ b/index.html
@@ -13,22 +13,32 @@
     <nav class="navbar navbar-dark bg-info text-light">
         <h3>Cole Anderson</h3>
         <div class="d-flex">
-            <a class="text-light pr-2" href="index.html">Bio </a>
-            <a class="text-light pr-2" href="projects.html">Projects </a>
-            <a class="text-light pr-2" href="resume.html">Resume </a>
-            <a class="text-light pr-2" href="contact.html">Contact Info </a>
-            <a class="text-light pr-2" href="personal_inquiries.html">Personal Inquiries</a>
+            <a class="text-light pr-3" href="index.html">
+                <b>Bio</b>
+            </a>
+            <a class="text-light pr-3" href="projects.html">
+                <b>Projects</b>
+            </a>
+            <a class="text-light pr-3" href="resume.html">
+                <b>Resume</b>
+            </a>
+            <a class="text-light pr-3" href="contact.html">
+                <b>Contact Info</b>
+            </a>
+            <a class="text-light pr-3" href="personal_inquiries.html">
+                <b>Personal Inquiries</b>
+            </a>
         </div>
     </nav>
     <div class="container">
-        <div class="card">
+        <div class="card mt-3">
             <div class="card-body">
                 <h4 class="card-title text-light">About Me:</h4>
                 <h5 class="card-text text-info">My name is Cole Anderson. I graduated as salutatorian of Charleston High School in 2018 and then became a
                     student of Base Camp Coding Academy's class of 2019 on June 6, 2018.</h5>
             </div>
         </div>
-        <div class="card">
+        <div class="card mt-3">
             <div class="card-body">
                 <h4 class="card-title text-light">Learned Languages:</h4>
                 <h5 class="card-text text-info">Python, HTML, CSS and JavaScript</h5>
