--- a/projects.html
+++ b/projects.html
@@ -11,17 +11,27 @@
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>Projects</h3>
+        <h3>Cole Anderson</h3>
         <div class="d-flex">
-            <a class="text-light pr-2" href="index.html">Bio </a>
-            <a class="text-light pr-2" href="projects.html">Projects </a>
-            <a class="text-light pr-2" href="resume.html">Resume </a>
-            <a class="text-light pr-2" href="contact.html">Contact Info </a>
-            <a class="text-light pr-2" href="personal_inquiries.html">Personal Inquiries</a>
+            <a class="text-light pr-3" href="index.html">
+                <b>Bio</b>
+            </a>
+            <a class="text-light pr-3" href="projects.html">
+                <b>Projects</b>
+            </a>
+            <a class="text-light pr-3" href="resume.html">
+                <b>Resume</b>
+            </a>
+            <a class="text-light pr-3" href="contact.html">
+                <b>Contact Info</b>
+            </a>
+            <a class="text-light pr-3" href="personal_inquiries.html">
+                <b>Personal Inquiries</b>
+            </a>
         </div>
     </nav>
     <div class="container">
-        <div class="card text-light pl-2">
+        <div class="card text-light pl-2 pr-2 mt-3">
             <h4>Gladiators & OOP Gladiators</h4>
             <div class="d-flex">
                 <h6 class="d-flex pr-2">Coded With:
@@ -50,7 +60,7 @@
                     simple program into something more efficient.</h6>
             </div>
         </div>
-        <div class="card text-light pl-2">
+        <div class="card text-light pl-2 pr-2 mt-3">
             <h4>Fake Base Camp Page & Log-In</h4>
             <div class="d-flex">
                 <h6 class="d-flex pr-2">Coded With:
