--- a/resume.html
+++ b/resume.html
@@ -11,13 +11,23 @@
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>Resume</h3>
+        <h3>Cole Anderson</h3>
         <div class="d-flex">
-            <a class="text-light pr-2" href="index.html">Bio </a>
-            <a class="text-light pr-2" href="projects.html">Projects </a>
-            <a class="text-light pr-2" href="resume.html">Resume </a>
-            <a class="text-light pr-2" href="contact.html">Contact Info </a>
-            <a class="text-light pr-2" href="personal_inquiries.html">Personal Inquiries</a>
+            <a class="text-light pr-3" href="index.html">
+                <b>Bio</b>
+            </a>
+            <a class="text-light pr-3" href="projects.html">
+                <b>Projects</b>
+            </a>
+            <a class="text-light pr-3" href="resume.html">
+                <b>Resume</b>
+            </a>
+            <a class="text-light pr-3" href="contact.html">
+                <b>Contact Info</b>
+            </a>
+            <a class="text-light pr-3" href="personal_inquiries.html">
+                <b>Personal Inquiries</b>
+            </a>
         </div>
     </nav>
     <div class="card text-light">
