--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,32 @@
         </div>
     </nav>
     <div class="container">
-        <div class="card text-light pl-2 pr-2 mt-3">
+        <div class="card text-light pl-2 pr-2 mt-3 mb-3">
+            <h4>Practicing OOD</h4>
+            <div class="d-flex">
+                <h6 class="d-flex pr-2">Coded With:
+                    <p class="text-info pl-2">Python</p>
+                </h6>
+                <h6 class="d-flex pr-2">Programming Age:
+                    <p class="text-info pl-2">4 Months</p>
+                </h6>
+            </div>
+            <div class="d-flex">
+                <h6>Link: </h6>
+                <h6 class="pl-2">
+                    <a class="text-info" href="https://github.com/ColeAnderson7278/Practicing_OOD">Practicing OOD</a>
+                </h6>
+            </div>
+            <div>
+                <h6>Description:</h6>
+                <h6 class="text-info">This is a personal project that I started around the end of September. What this project focuses on is my
+                    better understanding, and use, of object-oriented design. I do this by reading
+                    <i>Practical Object-Oriented Design In Ruby</i>, and I then use my new knowledge to rewrite the ruby examples
+                    into Python code while explaining myself.
+                </h6>
+            </div>
+        </div>
+        <div class="card text-light pl-2 pr-2 mb-3">
             <h4>Gladiators & OOP Gladiators</h4>
             <div class="d-flex">
                 <h6 class="d-flex pr-2">Coded With:
@@ -60,7 +85,7 @@
                     simple program into something more efficient.</h6>
             </div>
         </div>
-        <div class="card text-light pl-2 pr-2 mt-3">
+        <div class="card text-light pl-2 pr-2 mb-3">
             <h4>Fake Base Camp Page & Log-In</h4>
             <div class="d-flex">
                 <h6 class="d-flex pr-2">Coded With:
