--- a/personal_inquiries.html
+++ b/personal_inquiries.html
@@ -30,6 +30,17 @@
             </a>
         </div>
     </nav>
+    <div class="container">
+        <div class="card text-light pl-2 pr-2 mt-3 mb-3">
+            <h3>Object-Oriented Design</h3>
+            <h5 class="text-info">I got into this type of design around two months into the program when my instructor gave me
+                <i>Practical Object-Oriented Design In Ruby</i> to read. This book doesn't show me new tools to use; however,
+                it gives me a new way to view, think, and for most design my code. After reading this book I began working
+                on a personal side project called
+                <a href="https://github.com/ColeAnderson7278/Practicing_OOD" class="text-info">Practicing OOD</a> in which I reread this book, which is written for Ruby, and then rewrite the coding example
+                in Python. I also explain my reasons for doing so in my commit statements.</h5>
+        </div>
+    </div>
 </body>
 
 </html>
