--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         <div class="card mt-3">
             <div class="card-body">
                 <h4 class="card-title text-light">About Me:</h4>
-                <h5 class="card-text text-info">My name is Cole Anderson. I graduated as salutatorian of Charleston High School in 2018 and then became a
-                    student of Base Camp Coding Academy's class of 2019 on June 6, 2018.</h5>
+                <h5 class="card-text text-info">My name is Cole Anderson. I graduated from Charleston High School in 2018 as their salutatorian and then
+                    went on to become a student of the Base Camp Coding Academy's class of 2019. I started out with no previous
+                    knowledge of computer languages; however, over these the few months I've definitely gained a serious
+                    appreciation for this field and for the code I write .</h5>
             </div>
         </div>
         <div class="card mt-3">
