Added Large Screen Sizing
Added col-lg where it was needed so that
my content fit better when on a larger
screen such as a monitor.

--- a/personal_inquiries.html
+++ b/personal_inquiries.html
@@ -30,8 +30,8 @@
             </a>
         </div>
     </nav>
-    <div class="container">
-        <div class="card text-light pl-2 pr-2 mt-3 mb-3">
+    <div class="container col-lg-6">
+        <div class="card text-light px-3 mt-3 mb-3">
             <h3>Object-Oriented Design</h3>
             <h5 class="text-info">I got into this type of design around two months into the program when my instructor gave me
                 <i>Practical Object-Oriented Design In Ruby</i> to read. This book doesn't show me new tools to use; however,
