--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </a>
         </div>
     </nav>
-    <div class="container">
+    <div class="container col-lg-6">
         <div class="card mt-3">
             <div class="card-body">
                 <h4 class="card-title text-light">About Me:</h4>
