--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
             </a>
         </div>
     </nav>
-    <div class="container">
+    <div class="container col-lg-6">
         <div class="card text-light pl-2 pr-2 mt-3 mb-3">
             <h4>Practicing OOD</h4>
             <div class="d-flex">
