--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>Cole Anderson</h3>
+        <h3>Resume</h3>
         <div class="d-flex">
             <a class="text-light pr-3" href="index.html">
                 <b>Bio</b>
