Added CSS & Margins
I added a very small amount of CSS to
my program and then added some margin
space to make things  look nicer.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         </div>
     </nav>
     <div class="container col-lg-6">
-        <div class="card mt-3">
+        <div class="card mt-3 mb-3">
             <div class="card-body">
                 <h4 class="card-title text-light">About Me:</h4>
                 <h5 class="card-text text-info">My name is Cole Anderson. I graduated from Charleston High School in 2018 as their salutatorian and then
@@ -40,7 +41,7 @@
                     appreciation for this field and for the code I write .</h5>
             </div>
         </div>
-        <div class="card mt-3">
+        <div class="card mb-3">
             <div class="card-body">
                 <h4 class="card-title text-light">Learned Languages:</h4>
                 <h5 class="card-text text-info">Python, HTML, CSS and JavaScript</h5>
