--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Contact Info</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
@@ -30,7 +31,7 @@
             </a>
         </div>
     </nav>
-    <div class="card">
+    <div class="card mx-3 mt-3">
         <div class="card-body">
             <h3 class="card-title text-light">Contact Information:</h3>
             <h5 class="text-light">Github:
@@ -43,9 +44,6 @@
             </h5>
             <h5 class="text-light">Personal Email:
                 <p class="text-info">coleanderson7278@gmail.com</p>
-            </h5>
-            <h5 class="text-light">Phone:
-                <p class="text-info">(662)699-9054</p>
             </h5>
         </div>
     </div>
