--- a/personal_inquiries.html
+++ b/personal_inquiries.html
@@ -7,6 +7,7 @@
     <title>Personal Inquiries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
