--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
     <title>Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
@@ -30,8 +31,8 @@
             </a>
         </div>
     </nav>
-    <div class="card text-light">
-        <h4>This page is to be added at a later date.</h4>
+    <div class="card mx-3 mt-3 px-2 text-light">
+        <h4>To be added</h4>
     </div>
 </body>
 
