Fixed Margin Mismatch
I went into each card and made sure that
it's contents were inside of a card body
so that they all followed the same margin
style.

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
             <h3 class="card-title text-light">Contact Information:</h3>
             <h5 class="text-light">Github:
                 <p>
-                    <a href="" class="text-info">ColeAnderson7278</a>
+                    <a href="https://github.com/ColeAnderson7278" class="text-info">ColeAnderson7278</a>
                 </p>
             </h5>
             <h5 class="text-light">Base Camp Email:
