--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,9 @@
         </div>
     </nav>
     <div class="card mx-3 mt-3 px-2 text-light">
-        <h4>To be added</h4>
+        <div class="card-body">
+            <h4>To be added at a later date.</h4>
+        </div>
     </div>
 </body>
 
