--- a/projects.html
+++ b/projects.html
@@ -32,85 +32,93 @@
         </div>
     </nav>
     <div class="container col-lg-6">
-        <div class="card text-light pl-2 pr-2 mt-3 mb-3">
-            <h4>Practicing OOD</h4>
-            <div class="d-flex">
-                <h6 class="d-flex pr-2">Coded With:
-                    <p class="text-info pl-2">Python</p>
-                </h6>
-                <h6 class="d-flex pr-2">Programming Age:
-                    <p class="text-info pl-2">4 Months</p>
-                </h6>
-            </div>
-            <div class="d-flex">
-                <h6>Link: </h6>
-                <h6 class="pl-2">
-                    <a class="text-info" href="https://github.com/ColeAnderson7278/Practicing_OOD">Practicing OOD</a>
-                </h6>
-            </div>
-            <div>
-                <h6>Description:</h6>
-                <h6 class="text-info">This is a personal project that I started around the end of September. What this project focuses on is my
-                    better understanding, and use, of object-oriented design. I do this by reading
-                    <i>Practical Object-Oriented Design In Ruby</i>, and I then use my new knowledge to rewrite the ruby examples
-                    into Python code while explaining myself.
-                </h6>
-            </div>
-        </div>
-        <div class="card text-light pl-2 pr-2 mb-3">
-            <h4>Gladiators & OOP Gladiators</h4>
-            <div class="d-flex">
-                <h6 class="d-flex pr-2">Coded With:
-                    <p class="text-info pl-2">Python</p>
-                </h6>
-                <h6 class="d-flex pr-2">Programming Age:
-                    <p class="text-info pl-2">1 Month</p>
-                </h6>
-            </div>
-            <div class="d-flex">
-                <h6>Links: </h6>
-                <h6 class="pl-2">
-                    <a class="text-info" href="https://github.com/ColeAnderson7278/Gladiators">Gladiators</a>
-                </h6>
-                <h6>,</h6>
-                <h6 class="pl-2">
-                    <a class="text-info" href="https://github.com/ColeAnderson7278/OOP-Gladiators">OOP Gladiators</a>
-                </h6>
-            </div>
-            <div>
-                <h6>Description:</h6>
-                <h6 class="text-info">These two programs are following the same goals and using the same language; however, I used two different
-                    coding styles to achieve said goals. In Gladiators I used standard python to make a turn based fighting
-                    game. I did the same in OOP Gladiators, but in that program I used a class based system to better organize
-                    my code. I put these two together because I believe that help to show how I updated, and expanded, a
-                    simple program into something more efficient.</h6>
+        <div class="card text-light mt-3 mb-3">
+            <div class="card-body">
+                <h4>Practicing OOD</h4>
+                <div class="d-flex">
+                    <h6 class="d-flex pr-2">Coded With:
+                        <p class="text-info pl-2">Python</p>
+                    </h6>
+                    <h6 class="d-flex pr-2">Programming Age:
+                        <p class="text-info pl-2">4 Months</p>
+                    </h6>
+                </div>
+                <div class="d-flex">
+                    <h6>Link: </h6>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/Practicing_OOD">Practicing OOD</a>
+                    </h6>
+                </div>
+                <div>
+                    <h6>Description:</h6>
+                    <h6 class="text-info">This is a personal project that I started around the end of September. What this project focuses on is
+                        my better understanding, and use, of object-oriented design. I do this by reading
+                        <i>Practical Object-Oriented Design In Ruby</i>, and I then use my new knowledge to rewrite the ruby
+                        examples into Python code while explaining myself.
+                    </h6>
+                </div>
             </div>
         </div>
         <div class="card text-light pl-2 pr-2 mb-3">
-            <h4>Fake Base Camp Page & Log-In</h4>
-            <div class="d-flex">
-                <h6 class="d-flex pr-2">Coded With:
-                    <p class="text-info pl-2">HTML & CSS</p>
-                </h6>
-                <h6 class="d-flex pr-2">Programming Age:
-                    <p class="text-info pl-2">3 Months</p>
-                </h6>
+            <div class="card-body">
+                <h4>Gladiators & OOP Gladiators</h4>
+                <div class="d-flex">
+                    <h6 class="d-flex pr-2">Coded With:
+                        <p class="text-info pl-2">Python</p>
+                    </h6>
+                    <h6 class="d-flex pr-2">Programming Age:
+                        <p class="text-info pl-2">1 Month</p>
+                    </h6>
+                </div>
+                <div class="d-flex">
+                    <h6>Links: </h6>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/Gladiators">Gladiators</a>
+                    </h6>
+                    <h6>,</h6>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/OOP-Gladiators">OOP Gladiators</a>
+                    </h6>
+                </div>
+                <div>
+                    <h6>Description:</h6>
+                    <h6 class="text-info">These two programs are following the same goals and using the same language; however, I used two different
+                        coding styles to achieve said goals. In Gladiators I used standard python to make a turn based fighting
+                        game. I did the same in OOP Gladiators, but in that program I used a class based system to better
+                        organize my code. I put these two together because I believe that help to show how I updated, and
+                        expanded, a simple program into something more efficient.</h6>
+                </div>
             </div>
-            <div class="d-flex">
-                <h6>Links: </h6>
-                <h6 class="pl-2">
-                    <a class="text-info" href="https://github.com/ColeAnderson7278/Fake_BaseCampPage">Fake B.C. Page</a>
-                </h6>
-                <p>,</p>
-                <h6 class="pl-2">
-                    <a class="text-info" href="https://github.com/ColeAnderson7278/Fake_BaseCampLogin">Fake B.C. Log-In</a>
-                </h6>
-            </div>
-            <div>
-                <h6>Description:</h6>
-                <h6 class="text-info">These are two programs that I wrote after we first began learning HTML and CSS. These two pages have flaws,
-                    but they taught me a lot about what I could do with my new set of tools and what not to do with them.
-                    Even in their simplicity these pages help me establish a good foothold and idea of front-end design.</h6>
+        </div>
+        <div class="card text-light pl-2 pr-2 mb-3">
+            <div class="card-body">
+                <h4>Fake Base Camp Page & Log-In</h4>
+                <div class="d-flex">
+                    <h6 class="d-flex pr-2">Coded With:
+                        <p class="text-info pl-2">HTML & CSS</p>
+                    </h6>
+                    <h6 class="d-flex pr-2">Programming Age:
+                        <p class="text-info pl-2">3 Months</p>
+                    </h6>
+                </div>
+                <div class="d-flex">
+                    <h6>Links: </h6>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/Fake_BaseCampPage">Fake B.C. Page</a>
+                    </h6>
+                    <p>,</p>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/Fake_BaseCampLogin">Fake B.C. Log-In</a>
+                    </h6>
+                </div>
+                <div>
+                    <h6>Description:</h6>
+                    <h6 class="text-info">These are two programs that I wrote after we first began learning HTML and CSS. These two pages have
+                        flaws, but they taught me a lot about what I could do with my new set of tools and what not to do
+                        with them. Even in their simplicity these pages help me establish a good foothold and idea of front-end
+                        design.
+                    </h6>
+                </div>
             </div>
         </div>
     </div>
