--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
             </a>
         </div>
     </nav>
-    <div class="container col-lg-6">
-        <div class="card text-light mt-3 mb-3">
+    <main>
+        <div class="card text-light">
             <div class="card-body">
                 <h4>Practicing OOD</h4>
                 <div class="d-flex">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </div>
-        <div class="card text-light pl-2 pr-2 mb-3">
+        <div class="card text-light">
             <div class="card-body">
                 <h4>Gladiators & OOP Gladiators</h4>
                 <div class="d-flex">
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <div class="card text-light pl-2 pr-2 mb-3">
+        <div class="card text-light">
             <div class="card-body">
                 <h4>Fake Base Camp Page & Log-In</h4>
                 <div class="d-flex">
@@ -121,7 +121,33 @@
                 </div>
             </div>
         </div>
-    </div>
+        <div class="card text-light">
+            <div class="card-body">
+                <h4>Rental Agency</h4>
+                <div class="d-flex">
+                    <h6 class="d-flex pr-2">Coded With:
+                        <p class="text-info pl-2">Python</p>
+                    </h6>
+                    <h6 class="d-flex pr-2">Programming Age:
+                        <p class="text-info pl-2">2 Months</p>
+                    </h6>
+                </div>
+                <div class="d-flex">
+                    <h6>Link: </h6>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/Rental_Agency_ColeAnderson">Rental Agency</a>
+                    </h6>
+                </div>
+                <div>
+                    <h6>Description:</h6>
+                    <h6 class="text-info">This was our first final project, which we coded in Python. This project really forced me to use all
+                        of my knowledge of Python in one, single application. It also really helped me see my strengths and
+                        my weaknesses, but it allowed me to see that I could easily build off of both to make sure I was
+                        much more well rounded by the end.</h6>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
