Added Learned Language Ul
I added the names of my learned languages
to an unordered list and made them list
items. I also styled it with css so that the
bullet points are different colors.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>Cole Anderson</h3>
+        <h3>
+            <i class="far fa-address-card"></i> Cole Anderson
+        </h3>
         <div class="d-flex">
             <a class="text-light pr-3" href="index.html">
                 <b>Bio</b>
@@ -35,7 +39,7 @@
         <div class="card mt-3 mb-3">
             <div class="card-body">
                 <h4 class="card-title text-light">About Me:</h4>
-                <h5 class="card-text text-info">My name is Cole Anderson. I graduated from Charleston High School in 2018 as their salutatorian and then
+                <h5 class="card-text text-info">My name is Cole Anderson. I graduated from Charleston High School in 2018 as their Salutatorian and then
                     went on to become a student of the Base Camp Coding Academy's class of 2019. I started out with no previous
                     knowledge of computer languages; however, over these the few months I've definitely gained a serious
                     appreciation for this field and for the code I write .</h5>
@@ -44,7 +48,14 @@
         <div class="card mb-3">
             <div class="card-body">
                 <h4 class="card-title text-light">Learned Languages:</h4>
-                <h5 class="card-text text-info">Python, HTML, CSS and JavaScript</h5>
+                <h5 class="card-text text-info">
+                    <ul>
+                        <li>Python</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </h5>
             </div>
         </div>
     </div>
