--- a/resume.html
+++ b/resume.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="bootswatch.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
 </head>
 
 <body>
     <nav class="navbar navbar-dark bg-info text-light">
-        <h3>Resume</h3>
+        <h3>
+            <i class="fab fa-black-tie"></i> Resume
+        </h3>
         <div class="d-flex">
             <a class="text-light pr-3" href="index.html">
                 <b>Bio</b>
