--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h5 class="card-text text-info">My name is Cole Anderson. I graduated from Charleston High School in 2018 as their Salutatorian and then
                     went on to become a student of the Base Camp Coding Academy's class of 2019. I started out with no previous
                     knowledge of computer languages; however, over these the few months I've definitely gained a serious
-                    appreciation for this field and for the code I write .</h5>
+                    appreciation for this field and for the code that I write .</h5>
             </div>
         </div>
         <div class="card mb-3">
