Made Grammer Corrections
I went back through my code and made
grammar changes and corrections.

--- a/contact.html
+++ b/contact.html
@@ -44,10 +44,10 @@
                 </p>
             </h5>
             <h5 class="text-light">Base Camp Email:
-                <p class="text-info">canderson@basecampcodingacademy.org</p>
+                <a href="mailto:canderson@basecampcodingacademy.org">canderson@basecampcodingacademy.org</a>
             </h5>
             <h5 class="text-light">Personal Email:
-                <p class="text-info">coleanderson7278@gmail.com</p>
+                <a href="mailto:coleanderson7278@gmail.com">coleanderson7278@gmail.com</a>
             </h5>
         </div>
     </div>
