--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                 <h4 class="card-title text-light">About Me:</h4>
                 <h5 class="card-text text-info">My name is Cole Anderson. I graduated as Salutatorian from Charleston High School in 2018 and then went on
                     to become a student of the Base Camp Coding Academy's class of 2019. I started out with no previous knowledge
-                    of computer languages; however, over these the few months I've definitely gained a serious appreciation
+                    of computer languages; however, over these these few months I've definitely gained a serious appreciation
                     for this field and for the code that I write. I now can say I enjoy my work, and I'm very excited for
                     what the future holds.</h5>
             </div>
         </div>
         <div class="card mb-3">
             <div class="card-body">
-                <h4 class="card-title text-light">Learned Languages:</h4>
+                <h4 class="card-title text-light">Languages I've Learned:</h4>
                 <h5 class="card-text text-info">
                     <ul>
                         <li>Python</li>
