--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
     <main>
         <div class="card text-light">
             <div class="card-body">
-                <h4>Practicing OOD</h4>
+                <h4>Practicing Object-Oriented Design</h4>
                 <div class="d-flex">
                     <h6 class="d-flex pr-2">Coded With:
                         <p class="text-info pl-2">Python</p>
@@ -57,8 +57,8 @@
                     <h6>Description:</h6>
                     <h6 class="text-info">This is a personal project that I started around the end of September. What this project focuses on is
                         my better understanding, and use, of object-oriented design. I do this by reading
-                        <i>Practical Object-Oriented Design In Ruby</i>, and I then use my new knowledge to rewrite the ruby
-                        examples into Python code while explaining myself.
+                        <i>Practical Object-Oriented Design In Ruby</i>, and I then use my new knowledge to rewrite the Ruby
+                        examples into Python code while explaining myself in my commit messages.
                     </h6>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                     <h6>Description:</h6>
                     <h6 class="text-info">These are two programs that I wrote after we first began learning HTML and CSS. These two pages have
                         flaws, but they taught me a lot about what I could do with my new set of tools and what not to do
-                        with them. Even in their simplicity these pages help me establish a good foothold and idea of front-end
+                        with them. Even in their simplicity, these pages help me establish a good foothold and idea of front-end
                         design.
                     </h6>
                 </div>
