--- a/resume.html
+++ b/resume.html
@@ -18,21 +18,23 @@
             <i class="fab fa-black-tie"></i> Resume
         </h3>
         <div class="d-flex">
-            <a class="text-light pr-3" href="index.html">
-                <b>Bio</b>
-            </a>
-            <a class="text-light pr-3" href="projects.html">
-                <b>Projects</b>
-            </a>
-            <a class="text-light pr-3" href="resume.html">
-                <b>Resume</b>
-            </a>
-            <a class="text-light pr-3" href="contact.html">
-                <b>Contact Info</b>
-            </a>
-            <a class="text-light pr-3" href="personal_inquiries.html">
-                <b>Personal Inquiries</b>
-            </a>
+            <h6>
+                <a class="text-light p-3" href="index.html">
+                    <b>Bio</b>
+                </a>
+                <a class="text-light p-3" href="projects.html">
+                    <b>Projects</b>
+                </a>
+                <a class="text-light p-3" href="resume.html">
+                    <b>Resume</b>
+                </a>
+                <a class="text-light p-3" href="contact.html">
+                    <b>Contact Info</b>
+                </a>
+                <a class="text-light pr-3" href="personal_inquiries.html">
+                    <b>Personal Inquiries</b>
+                </a>
+            </h6>
         </div>
     </nav>
     <div class="card mx-3 mt-3 px-2 text-light">
