--- a/personal_inquiries.html
+++ b/personal_inquiries.html
@@ -13,28 +13,20 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-info text-light">
-        <h3>
-            <i class="fas fa-book-reader"></i> Personal Inquiries
-        </h3>
-        <div class="d-flex">
-            <h6>
-                <a class="text-light p-2" href="index.html">
-                    <b>Bio</b>
-                </a>
-                <a class="text-light p-2" href="projects.html">
-                    <b>Projects</b>
-                </a>
-                <a class="text-light p-2" href="resume.html">
-                    <b>Resume</b>
-                </a>
-                <a class="text-light p-2" href="contact.html">
-                    <b>Contact Info</b>
-                </a>
-                <a class="text-light pr-2" href="personal_inquiries.html">
-                    <b>Personal Inquiries</b>
-                </a>
-            </h6>
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
+        <h3 class="navbar-brand">
+            <i class="fas fa-book-reader"></i> Personal Inquiries</h3>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="nav-link text-light" href="index.html">Biography</a>
+            <a class="nav-link text-light" href="projects.html">Projects</a>
+            <a class="nav-link text-light" href="resume.html">Resume</a>
+            <a class="nav-link text-light" href="contact.html">Contact Info</a>
+            <a class="nav-link text-light" href="personal_inquiries.html">Personal Inquiries</a>
         </div>
     </nav>
     <div class="container col-lg-6">
@@ -50,6 +42,12 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
