Updated Project Layout
Went in and updated the project's
page so that it fits better on a phone
or smaller screen.

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         <div class="card text-light">
             <div class="card-body">
                 <h4>Practicing Object-Oriented Design</h4>
-                <div class="d-flex">
+                <div>
                     <h6 class="d-flex pr-2">Coded With:
                         <p class="text-info pl-2">Python</p>
                     </h6>
@@ -70,7 +70,7 @@
         <div class="card text-light">
             <div class="card-body">
                 <h4>Gladiators & OOP Gladiators</h4>
-                <div class="d-flex">
+                <div>
                     <h6 class="d-flex pr-2">Coded With:
                         <p class="text-info pl-2">Python</p>
                     </h6>
@@ -101,7 +101,7 @@
         <div class="card text-light">
             <div class="card-body">
                 <h4>Fake Base Camp Page & Log-In</h4>
-                <div class="d-flex">
+                <div>
                     <h6 class="d-flex pr-2">Coded With:
                         <p class="text-info pl-2">HTML & CSS</p>
                     </h6>
@@ -132,7 +132,7 @@
         <div class="card text-light">
             <div class="card-body">
                 <h4>Rental Agency</h4>
-                <div class="d-flex">
+                <div>
                     <h6 class="d-flex pr-2">Coded With:
                         <p class="text-info pl-2">Python</p>
                     </h6>
