Padded Project Cards
Added in a slight amount of padding
to the bottom of each card to better
seperate them.

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <main>
-        <div class="card text-light">
+        <div class="card text-light pb-2">
             <div class="card-body">
                 <h4>Practicing Object-Oriented Design</h4>
                 <div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>
-        <div class="card text-light">
+        <div class="card text-light pb-2">
             <div class="card-body">
                 <h4>Gladiators & OOP Gladiators</h4>
                 <div>
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </div>
-        <div class="card text-light">
+        <div class="card text-light pb-2">
             <div class="card-body">
                 <h4>Fake Base Camp Page & Log-In</h4>
                 <div>
@@ -129,7 +129,7 @@
                 </div>
             </div>
         </div>
-        <div class="card text-light">
+        <div class="card text-light pb-2">
             <div class="card-body">
                 <h4>Rental Agency</h4>
                 <div>
