Commented out Rainfall
I commented out Rainfall from projects because it is
still in development.

--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="card text-light pb-2">
+        <!-- <div class="card text-light pb-2">
             <div class="card-body">
                 <h4>RainFall</h4>
                 <div>
@@ -106,7 +106,7 @@
                     </h6>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="card text-light pb-2">
             <div class="card-body">
                 <h4>Practicing Object-Oriented Design</h4>
